<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_inferior_inicio"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_inicio" />

    <item
        android:id="@+id/menu_inferior_entrada"
        android:icon="@drawable/cred_entrada"
        android:title="@string/title_entrada" />

    <item
        android:id="@+id/menu_inferior_salida"
        android:icon="@drawable/cred_salida"
        android:title="@string/title_salida" />

    <item
        android:id="@+id/menu_inferior_reporte"
        android:icon="@drawable/reportes"
        android:title="@string/title_reporte" />
    <item
        android:id="@+id/menu_inferior_salir"
        android:icon="@drawable/salir"
        android:title="@string/title_salir" />

</menu>
